# garantis-ai-agents

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
src/: __init__.py
src/agents/: __init__.py
src/agents/domain_validator/: __init__.py  agent.py  prompts.py  schemas.py
src/agents/edital_categorizer/: __init__.py  agent.py  prompts.py  schemas.py
src/agents/text_processor/: __init__.py  agent.py  prompts.py  schemas.py
src/agents/timing_analysis/: __init__.py  agent.py  schemas.py
src/api/: __init__.py  main.py
src/api/routes/: categorization.py  health.py  prompts.py  providers.py  text.py  timing.py  validation.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/client/: __init__.py  categorization.py  client.py  text.py  timing.py  validation.py
src/models/: __init__.py  config.py  factory.py
src/prompts/: __init__.py  index.json  loader.py
src/prompts/timing_analysis/: v1_simple.md  v3_decision_tree.md
src/providers/: __init__.py  base.py  factory.py  gemini.py  groq.py  openai.py  openrouter.py
src/scoring/: __init__.py  calculator.py  temporal.py  types.py
src/utils/: __init__.py
