[project]
name = "garantis-ai-agents"
version = "0.3.0"
description = "Repositório centralizado de AI Agents com suporte a múltiplos LLM providers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Garantis", email = "dev@garantis.com.br"}
]

dependencies = [
    "google-genai>=0.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Individual providers (install what you need)
openai = ["openai>=1.0.0"]
groq = ["groq>=0.4.0"]

# All providers
all = [
    "openai>=1.0.0",
    "groq>=0.4.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
